--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <ul class="sebelah-nih">
                 <li><a href="http://127.0.0.1:5500/index.html">HOME</a></li>
-                <li><a href=" http://localhost/wd/index.php/pendataran/">PENDAFTARAN</a></li>
+                <li><a href=" http://192.168.18.60/wd/pendataran/">PENDAFTARAN</a></li>
                 <li><a href=" https://www.astra-honda.com/after-sales/honda-genuine-parts">SPARE PART</a></li>
                 <li><a href="https://wa.link/f4lwww">CONTACT</a></li>
             </ul>
